Апи. Авторизация
- логин по паролю
- рега
- хеширование токенов и паролей
